--- a/Tailwind-with-cdn/public/landing_page.html
+++ b/Tailwind-with-cdn/public/landing_page.html
@@ -17,22 +17,26 @@
                 <div class="flex h-10 w-20 items-center justify-center backdrop-blur-l bg-blue-500 rounded-lg ml-4">
                     logo
                 </div>
+
                 <div
-                    class="flex h-10 w-14 items-center justify-center backdrop-blur-l bg-slate-50 border-4 border-blue-500 rounded-lg ml-4">
+                    class="h-10 w-14 md:w-40 text-center flex items-center justify-center text-[10px] md:text-[20px] md:ml-[40px]  hover:font-semibold">
+                    Home
+                </div>
+                <div
+                    class=" h-10 w-14 text-center flex items-center justify-center text-[10px] md:text-[20px] md:-ml-[5px] hover:font-semibold">
+                    Product
+                </div>
+                <div
+                    class=" h-10 w-14 md:w-24 text-center flex items-center justify-center text-[10px] md:text-[20px] md:ml-[40px] hover:font-semibold">
+                    About Us
+                </div>
+                <div
+                    class="flex h-10 w-14 md:w-24 items-center justify-center backdrop-blur-l bg-slate-50 border-4 border-blue-500 rounded-lg ml-4 md:ml-[60px]">
                     login
                 </div>
                 <div
-                    class="flex h-10 w-16 items-center justify-center backdrop-blur-l text-xs text-white border-4  bg-blue-500 rounded-lg ml-4">
+                    class="flex h-10 w-16 md:w-24 items-center justify-center backdrop-blur-l text-xs text-white border-4  bg-blue-500 rounded-lg ml-4 ">
                     Register
-                </div>
-                <div class="h-10 w-14 text-center flex items-center justify-center text-[10px] hover:font-semibold">
-                    home
-                </div>
-                <div class=" h-10 w-14 text-center flex items-center justify-center text-[10px] hover:font-semibold">
-                    product
-                </div>
-                <div class=" h-10 w-14 text-center flex items-center justify-center text-[10px] :font-semibold">
-                    about us
                 </div>
             </div>
 
@@ -42,15 +46,15 @@
 
     <!-- Categories -->
     <div class="h-[50px] w-full flex items-center justify-center text-[25px] mt-10 font-semibold">
-        ~ CONTENT ~
+        CONTENT
     </div>
     <!-- Categories End -->
 
     <!-- Card -->
-    <div class="flex flex-col mr-20 mt-10 justify-center">
+    <div class="flex flex-col mr-20 mt-10 md:grid md:grid-cols-2 justify-center">
         <!-- Card 1 -->
         <div
-            class=" w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400">
+            class=" w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400 ">
             <iframe class="mx-auto mt-5 rounded-lg" width="250" height="150"
                 src="https://www.youtube.com/embed/dMSU1aGD1lw?si=Yvux_2acWw3YuSxK" title="YouTube video player"
                 frameborder="0"
@@ -69,7 +73,7 @@
 
         <!-- Card-2 -->
         <div
-            class=" mt-5 w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400">
+            class=" mt-5 md:mt-0 w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400">
             <iframe class="mx-auto mt-5 rounded-lg" width="250" height="150"
                 src="https://www.youtube.com/embed/e48hRUicQVs?si=c9l_GMP5CIo7YAR_" title="YouTube video player"
                 frameborder="0"
@@ -91,12 +95,12 @@
         <div
             class=" mt-5 w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400">
             <iframe class="mx-auto mt-5 rounded-lg" width="250" height="150"
-                src="https://www.youtube.com/embed/dMSU1aGD1lw?si=Yvux_2acWw3YuSxK" title="YouTube video player"
+                src="https://www.youtube.com/embed/-I_hnBUH6ig?si=7koZVlhVa9CNYbVw" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <h1 class="text-[30px] font-semibold text-center mt-5 border-b-4 border-slate-200">
-                kisah islami
+                Palestina
             </h1>
             <p class="text-justify mx-5 mt-5">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
@@ -107,19 +111,38 @@
 
         <!-- Card 3 end -->
 
+        <!-- Card 4 -->
+        <div
+            class=" mt-5 w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400">
+            <iframe class="mx-auto mt-5 rounded-lg" width="250" height="150"
+                src="https://www.youtube.com/embed/b0MGkUWqyz8?si=xB7N3ECg-pn62IA9" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <h1 class="text-[30px] font-semibold text-center mt-5 border-b-4 border-slate-200">
+                Yahudi Laknat
+            </h1>
+            <p class="text-justify mx-5 mt-5">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                possimus! Libero modi ad autem dolor asperiores reiciendis nisi animi
+                laudantium.
+            </p>
+        </div>
+        <!-- Card 4 end -->
+
     </div>
 
     <!-- Card end -->
 
     <!-- Categories (2) -->
-    <div class="h-[50px] w-full ml-[20px] text-[36px] mt-20 font-semibold">
-        Kata orang-orang
+    <div class="h-[50px] w-full ml-[20px] text-[36px] md:text-center mt-20 font-semibold">
+        Kata Orang
     </div>
 
     <!-- CAtegories (2) end -->
 
     <!-- Card Viewers  -->
-    <div class="flex flex-col justify-normal mt-5">
+    <div class="flex flex-col md:grid md:grid-cols-2 justify-normal mt-10">
         <!-- Viewers 1 -->
         <div
             class="w-[340px] h-[180px] bg-slate-200 ml-[20px] rounded-lg border-[1px] border-slate-400 shadow-2xl shadow-slate-300 mb-10 hover:bg-slate-700 group">
@@ -176,27 +199,29 @@
         </div>
         <!-- Viewers 3 end -->
 
+
         <!-- Card Viewers end -->
 
-        <!-- Footer -->
-        <footer
-            class="mx-auto  h-[300px] w-full bg-slate-400 bg-cover bg-center border-b-4 border-slate-200 flex items-center">
-            <div>
-                <i class="fa-brands fa-instagram fa-2xl ml-[100px]"></i>
-                <i class="fa-brands fa-twitter fa-2xl ml-[50px]"></i>
-                <i class="fa-brands fa-facebook fa-2xl ml-[50px]"></i>
-                <i class="fa-brands fa-whatsapp fa-2xl ml-[50px]"></i>
-            </div>
-            <iframe class="ml-[10px] rounded-lg ring-offset-4 ring"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1066253614185!2d106.6145220750391!3d-6.380236093610109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e36544dcaf73%3A0xeedb717676dc68d0!2sPondok%20Tahfizh%20Plus%20Abu%20Dzar!5e0!3m2!1sid!2sid!4v1706595029963!5m2!1sid!2sid"
-                width="120" height="120" style="border: 0" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </footer>
-
-        <!-- Footer end -->
-
-
     </div>
+    <!-- Footer -->
+    <footer
+        class="mx-auto  h-[300px] w-full bg-slate-400 bg-cover bg-center border-b-4 border-slate-200 flex items-center">
+        <div>
+            <i class="fa-brands fa-instagram fa-2xl ml-[100px]"></i>
+            <i class="fa-brands fa-twitter fa-2xl ml-[50px]"></i>
+            <i class="fa-brands fa-facebook fa-2xl ml-[50px]"></i>
+            <i class="fa-brands fa-whatsapp fa-2xl ml-[50px]"></i>
+        </div>
+        <iframe class="ml-[160px] rounded-lg ring-offset-4 ring"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1066253614185!2d106.6145220750391!3d-6.380236093610109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e36544dcaf73%3A0xeedb717676dc68d0!2sPondok%20Tahfizh%20Plus%20Abu%20Dzar!5e0!3m2!1sid!2sid!4v1706595029963!5m2!1sid!2sid"
+            width="120" height="120" style="border: 0" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </footer>
+
+    <!-- Footer end -->
+
+
+
 </body>
 
 </html>
