--- a/Tailwind-with-cdn/public/landing_page.html
+++ b/Tailwind-with-cdn/public/landing_page.html
@@ -14,28 +14,29 @@
     <header>
         <div class=" h-20 w-full bg-slate-400 bg-cover bg-center border-b-4 border-slate-200 ">
             <div class="flex h-full w-full items-center backdrop-blur-lg">
-                <div class="flex h-10 w-20 items-center justify-center backdrop-blur-l bg-blue-500 rounded-lg ml-4">
+                <div class="flex h-10 w-20 items-center 
+                 justify-center backdrop-blur-l bg-blue-500 rounded-lg ml-4">
                     logo
                 </div>
 
-                <div
-                    class="h-10 w-14 md:w-40 text-center flex items-center justify-center text-[10px] md:text-[20px] md:ml-[40px]  hover:font-semibold">
+                <div class="h-10 w-14 md:w-40 text-center flex items-center 
+                     justify-center text-[10px] md:text-[20px] md:ml-[40px] lg:ml-[150px]  hover:font-semibold">
                     Home
                 </div>
-                <div
-                    class=" h-10 w-14 text-center flex items-center justify-center text-[10px] md:text-[20px] md:-ml-[5px] hover:font-semibold">
+                <div class=" h-10 w-14 text-center flex items-center 
+                     justify-center text-[10px] md:text-[20px] md:-ml-[5px] lg:ml-[25px] hover:font-semibold">
                     Product
                 </div>
-                <div
-                    class=" h-10 w-14 md:w-24 text-center flex items-center justify-center text-[10px] md:text-[20px] md:ml-[40px] hover:font-semibold">
+                <div class=" h-10 w-14 md:w-24 text-center flex items-center 
+                     justify-center text-[10px] md:text-[20px] md:ml-[40px] lg:ml-[70px] hover:font-semibold">
                     About Us
                 </div>
-                <div
-                    class="flex h-10 w-14 md:w-24 items-center justify-center backdrop-blur-l bg-slate-50 border-4 border-blue-500 rounded-lg ml-4 md:ml-[60px]">
+                <div class="flex h-10 w-14 md:w-24 items-center justify-center 
+                     backdrop-blur-l bg-slate-50 border-4 border-blue-500 rounded-lg ml-4 md:ml-[60px] lg:ml-[140px]">
                     login
                 </div>
-                <div
-                    class="flex h-10 w-16 md:w-24 items-center justify-center backdrop-blur-l text-xs text-white border-4  bg-blue-500 rounded-lg ml-4 ">
+                <div class="flex h-10 w-16 md:w-24 items-center 
+                     justify-center backdrop-blur-l text-xs text-white border-4  bg-blue-500 rounded-lg ml-4 ">
                     Register
                 </div>
             </div>
@@ -51,7 +52,7 @@
     <!-- Categories End -->
 
     <!-- Card -->
-    <div class="flex flex-col mr-20 mt-10 md:grid md:grid-cols-2 justify-center">
+    <div class="flex flex-col mr-20 mt-10 md:grid md:grid-cols-2 lg:grid-cols-3 justify-center">
         <!-- Card 1 -->
         <div
             class=" w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400 ">
@@ -93,7 +94,7 @@
 
         <!-- Card 3 -->
         <div
-            class=" mt-5 w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400">
+            class=" mt-5 lg:mt-0 w-[300px] h-[400px] bg-slate-200 ml-10 rounded-lg border-[3px] border-slate-400 shadow-2xl shadow-slate-400">
             <iframe class="mx-auto mt-5 rounded-lg" width="250" height="150"
                 src="https://www.youtube.com/embed/-I_hnBUH6ig?si=7koZVlhVa9CNYbVw" title="YouTube video player"
                 frameborder="0"
@@ -142,10 +143,10 @@
     <!-- CAtegories (2) end -->
 
     <!-- Card Viewers  -->
-    <div class="flex flex-col md:grid md:grid-cols-2 justify-normal mt-10">
+    <div class="flex flex-col md:grid md:grid-cols-2  justify-normal mt-10">
         <!-- Viewers 1 -->
         <div
-            class="w-[340px] h-[180px] bg-slate-200 ml-[20px] rounded-lg border-[1px] border-slate-400 shadow-2xl shadow-slate-300 mb-10 hover:bg-slate-700 group">
+            class="w-[340px] h-[180px] lg:w-[400px] bg-slate-200 ml-[20px] rounded-lg border-[1px] border-slate-400 shadow-2xl shadow-slate-300 mb-10 hover:bg-slate-700 group">
             <h1 class="text-[25px] font-semibold ml-5 group-hover:text-slate-100">
                 manusia
             </h1>
@@ -163,7 +164,7 @@
         <!-- viewers 1 end -->
         <!-- Viewers 2 -->
         <div
-            class="w-[340px] h-[180px] bg-slate-200 ml-[20px] rounded-lg border-[1px] border-slate-400 shadow-2xl shadow-slate-300 mb-10 hover:bg-slate-700 group">
+            class="w-[340px] h-[180px] lg:w-[400px] bg-slate-200 ml-[20px] rounded-lg border-[1px] border-slate-400 shadow-2xl shadow-slate-300 mb-10 hover:bg-slate-700 group">
             <h1 class="text-[25px] font-semibold ml-5 group-hover:text-slate-100">
                 manusia
             </h1>
@@ -182,7 +183,7 @@
 
         <!-- Viewers 3 -->
         <div
-            class="w-[340px] h-[180px] bg-slate-200 ml-[20px] rounded-lg border-[1px] border-slate-400 shadow-2xl shadow-slate-300 mb-10 hover:bg-slate-700 group">
+            class="w-[340px] h-[180px] lg:w-[400px] bg-slate-200 ml-[20px] rounded-lg border-[1px] border-slate-400 shadow-2xl shadow-slate-300 mb-10 hover:bg-slate-700 group">
             <h1 class="text-[25px] font-semibold ml-5 group-hover:text-slate-100">
                 manusia
             </h1>
@@ -204,18 +205,21 @@
 
     </div>
     <!-- Footer -->
-    <footer
-        class="mx-auto  h-[300px] w-full bg-slate-400 bg-cover bg-center border-b-4 border-slate-200 flex items-center">
-        <div>
-            <i class="fa-brands fa-instagram fa-2xl ml-[100px]"></i>
+    <footer class="  h-[300px] w-full bg-slate-400 bg-cover bg-center border-b-4 border-slate-200 flex items-center">
+        <div class="mx-auto ">
+            <i class="fa-brands fa-instagram fa-2xl ml-[100px]  "></i>
             <i class="fa-brands fa-twitter fa-2xl ml-[50px]"></i>
             <i class="fa-brands fa-facebook fa-2xl ml-[50px]"></i>
             <i class="fa-brands fa-whatsapp fa-2xl ml-[50px]"></i>
+
         </div>
-        <iframe class="ml-[160px] rounded-lg ring-offset-4 ring"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1066253614185!2d106.6145220750391!3d-6.380236093610109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e36544dcaf73%3A0xeedb717676dc68d0!2sPondok%20Tahfizh%20Plus%20Abu%20Dzar!5e0!3m2!1sid!2sid!4v1706595029963!5m2!1sid!2sid"
-            width="120" height="120" style="border: 0" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div>
+            <iframe class="mr-60 rounded-lg ring-offset-4 ring"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.1066253614185!2d106.6145220750391!3d-6.380236093610109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69e36544dcaf73%3A0xeedb717676dc68d0!2sPondok%20Tahfizh%20Plus%20Abu%20Dzar!5e0!3m2!1sid!2sid!4v1706595029963!5m2!1sid!2sid"
+                width="120" height="120" style="border: 0" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
     </footer>
 
     <!-- Footer end -->
